koha-tmpl/intranet-tmpl/prog/css/Labels/labels.css
#resizable {
  width: 100px;
  height: 100px;
  background: #ccc;
}
.button {
    min-width: 30px;
    height: 30px;
    background: #999;
    margin: 2px;
    text-align: center;
    border-radius: 5px;
    border: #3E90D8 solid 3px;
    z-index: 10001;
}
.button:hover {
    background:azure;
}
.region {
    width: 50px;
    height: 50px;
    background: #abc;
    position: absolute;
}
.region .itemnumber {
    font-weight: bold;
    background-color: rgb(153, 0, 0);
    color: #ffffff;
}
.element {
    width: 30px;
    height: 30px;
    background: #aff;
    position: absolute;
    text-align: center;
}
.staged {
    background: #faa;
}
.deployed {
    background: #afa;
}
.activeTarget {
    box-shadow: 0px 0px 5px 5px #555;
}
.exceptionTarget {
    background: #a55;
}
.sheet {
    position: absolute;
    left: 250px;
    top: 0;
    width: 200px;
    height: 125px;
    background: #999;
    color: #fff;
    padding: 10px;
    z-index: 10000;
}
.controlGroup {
    margin: 10px;
}
#sheetEditor {
    position: relative;
    display: none;
    width: 220px;
}
#sheetEditor input[type="number"] {
    width: 70px;
    color: black;
}
#sheetEditor .dataFormat {
    font-size: 50%;
}
#sheetEditor .selectBox {
    border: solid 1px gray;
    border-radius: 3px;
}
#sheetEditor .selectBox label {
    font-weight: bold;
}
#sheetEditor .selectBox .comment {
    background-color: white;
    border-radius: 3px;
    border: 1px solid;
    padding: 5px;
    margin: 3px;
}
#sheetEditorTooltip {
    position: absolute;
    min-width: 50px;
    top: -12px;
    left: 250px;
    background-color: #4D4D4D;
    padding: 0px 5px;
    color: white;
    white-space: nowrap;
    font-size: 80%;
}
#sheetContainer {
    position: absolute;
    top:20px;
}
#generalControls .button, 
#elementControls .button, 
#regionsDispenser .button {
    float:left;
}
#regionsDispenser, #regionControls {
    clear:both;
}
#sheetEditorConfig {
  clear:left;
  float:left;
  display: none;
}
#selectionControls {
    display: none;
    clear:left;
    float:left;
    width: 100%;
}
#selectionControls ul {
    padding: 0px;
}
#selectionControls ul li {
    padding: 5px 0;
    list-style: none;
}
#sheetListContainer {
    margin-top: 10px;
}
#sheetListContainer button, #exportSheet{
    margin-right: 3px;
    margin-bottom: 10px;
}
.sheetListNode {
    margin-bottom: 4px;
}
.sheetListNode .title {
    font-weight: bold;
}
.sheetListNode .author {

}
.sheetListNode .version::before {
    content: "v.";
}
.sheetListNode .version {
    font-style: italic;
}
#dataSourceFunctionDocs h5 {
    display: inline;
}
#dataSourceFunctionDocs .comment {
    display: none;
}
#dataSourceFunctionDocs .addButton {
  width: 20px;
  height: 20px;
  margin: 0px 0px 0px 10px;
  padding: 0px;
  font-size: 10px;
}
#sc_copy {
    margin: 5px 0;
}
#sc_copy input {
    width: 35px;
}

.btn{
    font-size: 12px;
    padding: 3px 10px;
}

#elementControls .button:hover {
    background-color:#aff;
    cursor:default;
}

.dsfd-doc {
    cursor:default;
    margin: 6px 0;
}

.dsfd-doc h5:hover .fa-info-circle {
    color: #0275d8;
}
.modal {
    z-index: 10050;
}

